--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
+    "@angular/fire": "^7.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "rxjs": "~7.5.0",
+    "angular-highcharts": "^13.0.1",
+    "firebase": "^9.6.5",
+    "highcharts": "^9.3.2",
+    "highcharts-angular": "^3.0.0",
+    "rxfire": "^6.0.3",
+    "rxjs": "^7.5.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
