--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "angular-highcharts": "^13.0.1",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.6.5",
     "highcharts": "^9.3.2",
     "highcharts-angular": "^3.0.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "rxfire": "^6.0.3",
     "rxjs": "^7.5.2",
     "tslib": "^2.3.0",
