--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@capacitor/android": "^3.4.0",
+    "@capacitor/ios": "^3.4.0",
+    "@capacitor/splash-screen": "^1.2.1",
     "angular-highcharts": "^13.0.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
@@ -36,6 +39,8 @@
     "@angular-devkit/build-angular": "~13.2.0",
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
+    "@capacitor/cli": "^3.4.0",
+    "@capacitor/core": "^3.4.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
